--- a/templates/page.about-us.liquid
+++ b/templates/page.about-us.liquid
@@ -1,3 +1,97 @@
 <main class="db-main site-main">
-  <h1>About Us Page</h1>
+  <section class="db-section db-section--about-us-banner">
+    <div class="db-container">
+      <div class="title-wrap">
+
+        <h1>
+          <span>
+            HELL YEAH
+          </span>
+
+          <span>
+            WE ARE
+          </span>
+        </h1>
+
+        <h4>
+          Welcome to the world of deadbeat, Deadbeat is a transmedia story centered around a radio station in the year 2069, where the undead rule the world.
+        </h4>
+
+      </div>
+
+      <div class="db-row">
+        <div class="db-col-spacer">
+          <div class="db-col">
+            <div class="db-logo-container">
+              <img src="{{ 'About-Us__asset-DB-logo.png' | asset_url }}" alt="Deadbeats Logo">
+            </div>
+          </div>
+
+          <div class="db-col">
+            <div class="db-banner-its-year">
+              IT’S YEAR
+            </div>
+            <div class="db-banner-content-block">
+              <div class="db-banner-2069">
+                2069
+              </div>
+
+              <div class="db-banner-and">
+                <span>
+                  A
+                </span>
+                <span>
+                  N
+                </span>
+                <span>
+                  D
+                </span>
+              </div>
+
+              <div class="db-banner-rock-the-world">
+                Undead rock the world
+              </div>
+            </div>
+
+            <div class="db-banner-featured">
+              
+              <div class="db-banner-featured-item">
+                <div class="featured-item-content">
+                  <div class="featured-item-title">
+                    MARKETPLACE
+                  </div>
+
+                  <div class="featured-item-description">
+                    Lorem ipsum dolor sit amet consec
+                  </div>
+                </div>
+
+                <div class="featured-item-image">
+                  <img src="{{ 'About-Us__asset-banner-v02.png' | asset_url }}" alt="">
+                </div>
+              </div>
+
+              <div class="db-banner-featured-item">
+                <div class="featured-item-content">
+                  <div class="featured-item-title">
+                    NFT COLLECTIONS
+                  </div>
+
+                  <div class="featured-item-description">
+                    Lorem ipsum dolor sit amet consec
+                  </div>
+                </div>
+
+                <div class="featured-item-image">
+                  <img src="{{ 'About-Us__asset-banner-v02.png' | asset_url }}" alt="">
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
 </main>
