banner and afterlife

--- a/templates/page.about-us.liquid
+++ b/templates/page.about-us.liquid
@@ -94,4 +94,52 @@
 
     </div>
   </section>
+
+  <section class="db-section db-section--about-us-after-life">
+    <div class="db-background-overlay"></div>
+    <div class="db-container">
+
+      
+      <div class="title-wrap">
+        <h2>
+          THE AFTER, AFTER LIFE
+        </h2>
+      </div>
+
+      <div class="db-row">
+
+        <div class="db-col">
+          Welcome to BEAT 96.9, a once great independent radio station, struggling to stay alive in the world of the undead. This new animated show follows the lives of the station’s re-animated crew as they manage their post-apocalyptic lives. 
+        </div>
+
+        <div class="db-col">
+          Welcome to BEAT 96.9, a once great independent radio station, struggling to stay alive in the world of the undead. This new animated show follows the lives of the station’s re-animated crew as they manage their post-apocalyptic lives. The show’s setting will allow for a broad array of colorful characters, transient guests, and somewhat live performances from the new world’s up-and-coming bands trying to bring their music and careers to life.
+        </div>
+
+        <div class="db-col">
+          Welcome to BEAT 96.9, a once great independent radio station, struggling to stay alive in the world of the undead. This new animated show follows the lives of the station’s re-animated crew as they manage their post-apocalyptic lives. 
+        </div>
+
+      </div>
+
+      <div class="db-row">
+
+        <div class="db-the-natives-title">
+          <h3>
+            <span>
+              THE STORY:
+            </span>
+
+            <span>
+              THE NATIVES
+            </span>
+          </h3>
+
+          <h3>
+            Main Characters
+          </h3>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
