--- a/styles/db-theme/_page--about-us.scss
+++ b/styles/db-theme/_page--about-us.scss
@@ -4,12 +4,12 @@
   background-repeat: no-repeat;
   background-size: cover;
   object-fit: cover;
-  padding-top: 109px;
+  padding-top: 256px;
 
   .db-container {
     .title-wrap {
       max-width: 795px;
-
+      margin-inline: auto;
 
       h1 {
         text-align: center;
@@ -208,6 +208,143 @@
           }
         }
 
+      }
+    }
+  }
+}
+.db-section--about-us-after-life {
+  background-image: url('About-Us__asset-bg-v02.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+  height: 1816px;
+  position: relative;
+
+  .db-background-overlay {
+    position: absolute;
+    background-image: url('About-Us__asset-bg-v03.png'), linear-gradient(180deg, #0E0712 0%, #402C50 100%);
+    background-blend-mode: color-dodge;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: cover;
+    height: 1000px;
+    left: 0;
+    right: 0;
+    z-index: -1;
+  }
+
+  .db-container {
+    padding-top: 213px;
+    padding-bottom: 650px;
+
+    .title-wrap {
+      h2 {
+        color: #FFF;
+        text-align: center;
+        font-family: $primaryFontFamily;
+        font-size: 80px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 100%;
+        /* 80px */
+        letter-spacing: -3.2px;
+      }
+    }
+
+    .db-row {
+
+      &:nth-child(2) {
+        column-gap: 70px;
+        justify-content: center;
+        margin-top: 70px;
+        margin-bottom: auto;
+
+        .db-col {
+          &:nth-child(1) {
+            color: #CAC7D0;
+            text-align: right;
+            font-family: $secondaryFontFamily;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%;
+            /* 24px */
+            letter-spacing: -0.64px;
+            max-width: 351px;
+          }
+
+          &:nth-child(2) {
+            color: #CAC7D0;
+            text-align: center;
+            font-family: $secondaryFontFamily;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%;
+            /* 24px */
+            letter-spacing: -0.64px;
+            max-width: 460px;
+          }
+
+          &:nth-child(3) {
+            color: #CAC7D0;
+            font-family: $secondaryFontFamily;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%;
+            /* 24px */
+            letter-spacing: -0.64px;
+            max-width: 350px;
+          }
+        }
+      }
+
+      &:nth-child(3) {
+        .db-the-natives-title {
+          text-align: center;
+          margin-inline: auto;
+
+          h3 {
+            &:nth-child(1) {
+              span {
+                &:nth-child(1) {
+                  color: #B1FF29;
+                  text-align: center;
+                  font-family: $primaryFontFamily;
+                  font-size: 48px;
+                  font-style: normal;
+                  font-weight: 700;
+                  line-height: 100%;
+                }
+
+                &:nth-child(2) {
+                  color: #A120D2;
+                  font-family: $primaryFontFamily;
+                  font-size: 48px;
+                  font-style: normal;
+                  font-weight: 700;
+                  line-height: 100%;
+                }
+              }
+            }
+
+            &:nth-child(2) {
+              color: #FFF;
+              text-align: center;
+              text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+              font-family: $primaryFontFamily;
+              font-size: 48px;
+              font-style: normal;
+              font-weight: 700;
+              line-height: 100%;
+              /* 48px */
+              text-decoration-line: underline;
+            }
+          }
+        }
       }
     }
   }
