--- a/styles/db-theme/_page--about-us.scss
+++ b/styles/db-theme/_page--about-us.scss
@@ -212,13 +212,14 @@
     }
   }
 }
+
 .db-section--about-us-after-life {
   background-image: url('About-Us__asset-bg-v02.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   object-fit: cover;
-  height: 1816px;
+  height: 1900px;
   position: relative;
 
   .db-background-overlay {
@@ -229,7 +230,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     object-fit: cover;
-    height: 1000px;
+    height: 1120px;
     left: 0;
     right: 0;
     z-index: -1;
@@ -237,8 +238,6 @@
 
   .db-container {
     padding-top: 213px;
-    padding-bottom: 650px;
-
     .title-wrap {
       h2 {
         color: #FFF;
@@ -254,94 +253,402 @@
     }
 
     .db-row {
+      flex-direction: column;
+      justify-content: space-between;
+      margin-top: 70px;
 
-      &:nth-child(2) {
-        column-gap: 70px;
-        justify-content: center;
-        margin-top: 70px;
-        margin-bottom: auto;
+      .db-col {
+        &:nth-child(1) {
+          display: flex;
+          column-gap: 70px;
+          justify-content: center;
+          
+          .db-inner-row {
 
-        .db-col {
-          &:nth-child(1) {
-            color: #CAC7D0;
-            text-align: right;
-            font-family: $secondaryFontFamily;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 150%;
-            /* 24px */
-            letter-spacing: -0.64px;
-            max-width: 351px;
-          }
+            &:nth-child(1) {
+              color: #CAC7D0;
+              text-align: right;
+              font-family: $secondaryFontFamily;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 150%;
+                /* 24px */
+              letter-spacing: -0.64px;
+              max-width: 351px;
+            }
+            
+            &:nth-child(2) {
+              color: #CAC7D0;
+              text-align: center;
+              font-family: $secondaryFontFamily;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 150%;
+              /* 24px */
+              letter-spacing: -0.64px;
+              max-width: 460px;
+            }
 
-          &:nth-child(2) {
-            color: #CAC7D0;
-            text-align: center;
-            font-family: $secondaryFontFamily;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 150%;
-            /* 24px */
-            letter-spacing: -0.64px;
-            max-width: 460px;
-          }
-
-          &:nth-child(3) {
-            color: #CAC7D0;
-            font-family: $secondaryFontFamily;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 150%;
-            /* 24px */
-            letter-spacing: -0.64px;
-            max-width: 350px;
+            &:nth-child(3) {
+              color: #CAC7D0;
+              font-family: $secondaryFontFamily;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 150%;
+              /* 24px */
+              letter-spacing: -0.64px;
+              max-width: 350px;
+            }
           }
         }
-      }
 
-      &:nth-child(3) {
-        .db-the-natives-title {
-          text-align: center;
-          margin-inline: auto;
+        &:nth-child(2) {
+          margin-top: 658px;
+          .db-the-natives-title {
+            text-align: center;
+            margin-inline: auto;
 
-          h3 {
-            &:nth-child(1) {
-              span {
-                &:nth-child(1) {
-                  color: #B1FF29;
-                  text-align: center;
+            h3 {
+              text-align: center;
+              &:nth-child(1) {
+                span {
                   font-family: $primaryFontFamily;
                   font-size: 48px;
                   font-style: normal;
                   font-weight: 700;
                   line-height: 100%;
+                  &:nth-child(1) {
+                    color: #B1FF29;
+                  }
+
+                  &:nth-child(2) {
+                    color: #A120D2;
+                  }
                 }
+              }
 
-                &:nth-child(2) {
-                  color: #A120D2;
-                  font-family: $primaryFontFamily;
-                  font-size: 48px;
-                  font-style: normal;
-                  font-weight: 700;
-                  line-height: 100%;
+              &:nth-child(2) {
+                color: #FFF;
+                text-align: center;
+                text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+                font-family: $primaryFontFamily;
+                font-size: 48px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 100%;
+                /* 48px */
+                text-decoration-line: underline;
+              }
+            }
+          }
+
+          .wrapper {
+            width: 100%;
+            position: relative;
+
+            .carousel {
+              display: grid;
+              // grid-template-columns: repeat(3, 450px);
+              grid-auto-columns: calc((100% / 3.2));
+              grid-template-rows: 367px;
+              column-gap: 40px;
+              padding-top: 90px;
+              overflow-x:hidden;
+              grid-auto-flow: column;
+              scroll-snap-type: x mandatory;
+              scroll-behavior: smooth;
+              scrollbar-width: none;
+
+              &::-webkit-scrollbar {
+                display: none;
+              }
+
+              &.no-transition {
+                scroll-behavior: auto;
+              }
+
+              &.dragging {
+                scroll-snap-type: none;
+                scroll-behavior: auto;
+
+                .native-card {
+                  cursor: grab;
+                  user-select: none;
+                }
+              }
+
+              
+              .native-card {
+                border-radius: 28.669px;
+                border: 1.108px solid rgba(62, 62, 62, 0.40);
+                background: rgba(0, 0, 0, 0.20);
+                transition: transform 0.1s linear;
+
+                .card-wrapper {
+                  padding-top: 75px;
+                  padding-right: 25px;
+                  padding-bottom: 76px;
+                  display: flex;
+                  flex-direction: column;
+                  align-items: flex-end;
+                  position: relative;
+                  height: 100%;
+
+                  &::before {
+                    content:"";
+                    position: absolute;
+                    display: block;
+                    bottom:0;
+                    top:0;
+                    width: 136px;
+                    left:0;
+                    background-image: url('About-Us__asset-native-bg-v01.png');
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    object-fit: cover;
+                    border-top-left-radius: 28px;
+                    border-bottom-left-radius: 28px;
+                    overflow: hidden;
+                  }
+
+                  .db-natives-image-container {
+                    position: absolute;
+                      left: -20px;
+                      bottom: -15px;
+                      img {
+                        display: block;
+                        object-fit: cover;
+                        height: 100%;
+                      }             
+                  }
+
+                  .db-natives-profile {
+                    display: flex;
+                    flex-direction: column;
+                    max-width: 213px;
+                    row-gap: 19px;
+                    position: relative;
+                    z-index: 2;
+                    .db-native-name {
+                      color: #FFF;
+                      font-family: $primaryFontFamily;
+                      font-size: 33.23px;
+                      font-style: normal;
+                      font-weight: 700;
+                      line-height: 115%; /* 38.215px */
+                      letter-spacing: -1.329px;
+                    }
+
+                    .db-native-description {
+                      color: #CAC7D0;
+                      font-family: $secondaryFontFamily;
+                      font-size: 13.292px;
+                      font-style: normal;
+                      font-weight: 400;
+                      line-height: 130%; /* 17.28px */
+                      letter-spacing: -0.532px;
+                    }
+
+                  }
+                }
+                
+              }
+            }
+          }
+
+          .db-buttons-slider {
+            max-width: 1146px;
+            margin-inline: auto;
+            margin-top: 70px;
+            .buttons {
+              display: flex;
+              justify-content: flex-end;
+              column-gap: 70px;
+              .svg-icon-prev, .svg-icon-next {
+                width: 20px;
+                cursor:pointer;
+                transition: all $hoverTransitionDuration ease-in;
+
+                &:hover {
+                  > path {
+                    fill: #AA27B1;
+                  }
                 }
               }
             }
+          }
+        }
+      }
+    }
+  }
+}
 
-            &:nth-child(2) {
+.db-section--about-us-resurrection {
+  background-image: url('About-Us__asset-resurrection-bg-v01.png');
+  background-position: 0px 0px;
+  background-repeat: no-repeat;
+  background-size: 100.158% 100%;
+  padding-top: 141px;
+  padding-bottom: 141px;
+
+  .db-container {
+    max-width: 1240px;
+    .db-row {
+      column-gap: 127px;
+      .db-col {
+        &:nth-child(1) {
+          .title-wrap {
+            text-align: center;
+            color: #B522EB;
+            font-family: $primaryFontFamily;
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 100%;
+          }
+
+          .db-cards-image-container {
+            margin-top: 30px;
+            display: flex;
+            flex-direction: column;
+            row-gap: 91px;
+            .db-cards-image {
+              max-width: 518px;
+              img {
+                display: block;
+                object-fit: cover;
+                width: 100%;
+              }
+
+              &:nth-child(1) {
+                align-self: flex-start;
+              }
+
+              &:nth-child(2) {
+                align-self: flex-end;
+              }
+            }
+          }
+        }
+
+        &:nth-child(2) {
+          h3 {
+            color: #FFF;
+            font-family: $primaryFontFamily;
+            font-size: 80px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 115%; /* 92px */
+            letter-spacing: -3.2px;
+          }
+
+          .db-resurrection-description {
+            color: #FFF;
+            text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+            font-family: $secondaryFontFamily;
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 150%; 
+            margin-top: 20px;
+          }
+
+          .db-resurrection-content-block {
+            display: flex;
+            flex-direction: column;
+            margin-top: 40px;
+            row-gap: 30px;
+            span {
+              color: #CAC7D0;
+              font-family: $secondaryFontFamily;
+              font-size: 18px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 150%;
+            }
+          }
+
+          .db-resurrection-cta {
+            margin-top: 70px;
+            display: flex;
+            align-items: center;
+            column-gap: 41px;
+            .db-btn {
+              display: flex;
+              width: 165px;
+              padding: 16px 32px;
+              justify-content: center;
+              align-items: center;
+              border-radius: 36.364px;
+              border: 1px solid #B1FF29;
+              color: #B1FF29;
+              font-family: $tertiaryFontFamily;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 700;
+              line-height: 100%; /* 16px */
+              letter-spacing: -0.64px;
+              transition: all $hoverTransitionDuration ease-in;
+              &:hover {
+                color: $whiteColor;
+                background-color: $secondaryColor;
+              }
+            }
+
+            a {
+              color: $whiteColor;
+              font-family: $tertiaryFontFamily;
+              font-size: 16px;
+              font-style: normal;
+              font-weight: 700;
+              line-height: 100%; /* 16px */
+              letter-spacing: -0.64px;
+              display: flex;
+              flex-direction: column;
+              
+              span {
+                margin-bottom: 2px;
+              }
+              svg {
+                width: max-content;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.db-section--about-us-elevate {
+  .db-container {
+    .db-row {
+      &:nth-child(1) {
+        .db-col {
+          &:nth-child(1) {
+            h4 {
               color: #FFF;
-              text-align: center;
               text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
               font-family: $primaryFontFamily;
               font-size: 48px;
               font-style: normal;
               font-weight: 700;
-              line-height: 100%;
-              /* 48px */
-              text-decoration-line: underline;
+              line-height: 100%; 
+            }
+
+            h3 {
+              color: #A120D2;
+              text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
+              font-family: $primaryFontFamily;
+              font-size: 56px;
+              font-style: normal;
+              font-weight: 700;
+              line-height: 100%; /* 56px */
+              letter-spacing: -2.24px;
             }
           }
         }
