--- a/templates/page.about-us.liquid
+++ b/templates/page.about-us.liquid
@@ -1,4 +1,4 @@
-<main class="db-main site-main">
+<main class="db-main site-main db-page--about-us">
   <section class="db-section db-section--about-us-banner">
     <div class="db-container">
       <div class="title-wrap">
@@ -107,39 +107,310 @@
       </div>
 
       <div class="db-row">
-
         <div class="db-col">
-          Welcome to BEAT 96.9, a once great independent radio station, struggling to stay alive in the world of the undead. This new animated show follows the lives of the station’s re-animated crew as they manage their post-apocalyptic lives. 
+          <div class="db-inner-row">
+            Welcome to BEAT 96.9, a once great independent radio station, struggling to stay alive in the world of the undead. This new animated show follows the lives of the station’s re-animated crew as they manage their post-apocalyptic lives. 
+          </div>
+
+          <div class="db-inner-row">
+            Welcome to BEAT 96.9, a once great independent radio station, struggling to stay alive in the world of the undead. This new animated show follows the lives of the station’s re-animated crew as they manage their post-apocalyptic lives. The show’s setting will allow for a broad array of colorful characters, transient guests, and somewhat live performances from the new world’s up-and-coming bands trying to bring their music and careers to life.
+          </div>
+
+          <div class="db-inner-row">
+            Welcome to BEAT 96.9, a once great independent radio station, struggling to stay alive in the world of the undead. This new animated show follows the lives of the station’s re-animated crew as they manage their post-apocalyptic lives. 
+          </div>
+
+
         </div>
 
         <div class="db-col">
-          Welcome to BEAT 96.9, a once great independent radio station, struggling to stay alive in the world of the undead. This new animated show follows the lives of the station’s re-animated crew as they manage their post-apocalyptic lives. The show’s setting will allow for a broad array of colorful characters, transient guests, and somewhat live performances from the new world’s up-and-coming bands trying to bring their music and careers to life.
-        </div>
 
-        <div class="db-col">
-          Welcome to BEAT 96.9, a once great independent radio station, struggling to stay alive in the world of the undead. This new animated show follows the lives of the station’s re-animated crew as they manage their post-apocalyptic lives. 
-        </div>
+          <div class="db-the-natives-title">
+            <h3>
+              <span>
+                THE STORY:
+              </span>
 
+              <span>
+                THE NATIVES
+              </span>
+            </h3>
+
+            <h3>
+              Main Characters
+            </h3>
+            
+          </div>
+
+          <div class="wrapper" ref="wrapper">
+            <ul class="carousel" ref="carousel">
+
+              <li class="native-card">
+                <div class="card-wrapper">
+                  <div class="db-natives-image-container">
+                   <div class="db-natives-image">
+                    <img src="{{ 'About-Us__asset-natives-v01.png' | asset_url }}" alt="">
+                  </div>
+                  </div>
+
+                  <div class="db-natives-profile">
+                    <div class="db-native-name">
+                      EVILIA GRIMSHAW
+                    </div>
+
+                    <div class="db-native-description">
+                      Soul-sucking’ station programmer.  Known lovingly at the station as Little Miss Evil, Evilia’s sarcasm, bottom-line attitude and biting wit often clashes with Roger’s rebellious spirit creating a constant source of comedic conflict.
+                    </div>
+                  </div>
+                </div>
+              </li>
+
+              <li class="native-card">
+                <div class="card-wrapper">
+                  <div class="db-natives-image-container">
+                  <div class="db-natives-image">
+                    <img src="{{ 'About-Us__asset-natives-v02.png' | asset_url }}" alt="">
+                  </div>
+                  </div>
+
+                  <div class="db-natives-profile">
+                    <div class="db-native-name">
+                      CHAZ NITELY
+                    </div>
+
+                    <div class="db-native-description">
+                      Late night talk-show host whose topics often center around Apocalypse Conspiracy Theories, Alien Encounters, and Government Cover-ups. Chaz has a huge following as well as a huge ego that barely fits into the rundown studio.
+                    </div>
+                  </div>
+                </div>
+                
+              </li>
+
+              <li class="native-card">
+                <div class="card-wrapper">
+                  <div class="db-natives-image-container">
+                    <div class="db-natives-image">
+                      <img src="{{ 'About-Us__asset-natives-v03.png' | asset_url }}" alt="">
+                    </div>
+                  </div>
+
+                  <div class="db-natives-profile">
+                    <div class="db-native-name">
+                      HARMONY BRIGGS
+                    </div>
+
+                    <div class="db-native-description">
+                      The new-to-town station programmer. Harmony is a somewhat mysterious and enigmatic figure that’s breathed a new life into the musty radio station as well as Roger.
+                    </div>
+                  </div>
+                </div> 
+              </li>
+            </ul>
+          </div>
+
+          <div class="db-buttons-slider">
+            <div class="buttons" ref="buttons">
+
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="21" viewBox="0 0 12 21" fill="none" class="svg-icon-prev db-svg" id="left" @click="onChangeActiveButton('left')" >
+                <path d="M0 10.9646C0 11.4615 0.248704 11.9584 0.497409 12.2068L8.70466 20.4056C9.45078 21.1509 10.6943 21.1509 11.4404 20.4056C12.1865 19.6603 12.1865 18.418 11.4404 17.6727L4.72539 10.9646L11.4404 4.25653C12.1865 3.51118 12.1865 2.26895 11.4404 1.52361C10.6943 0.778263 9.45078 0.778263 8.70466 1.52361L0.746114 9.47392C0.248705 9.97081 0 10.4677 0 10.9646Z" fill="#CAC7D0" :style="{fillOpacity: inActiveButton !== 'left' ? 0.4 : ''}"/>
+              </svg>
+
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="21" viewBox="0 0 12 21" fill="none" class="svg-icon-next db-svg" id="right" @click="onChangeActiveButton('right')">
+                <path d="M12 10.9646C12 11.4615 11.7513 11.9584 11.5026 12.2068L3.29534 20.4056C2.54922 21.1509 1.3057 21.1509 0.559586 20.4056C-0.186529 19.6603 -0.186529 18.418 0.559586 17.6727L7.27461 10.9646L0.559586 4.25653C-0.186529 3.51118 -0.186529 2.26895 0.559586 1.52361C1.3057 0.778263 2.54922 0.778263 3.29534 1.52361L11.2539 9.47392C11.7513 9.97081 12 10.4677 12 10.9646Z" fill="#CAC7D0" :style="{fillOpacity: inActiveButton !== 'right' ? 0.4 : ''}"/>
+              </svg>
+            </div>
+          </div>
+
+        </div>
       </div>
 
+    </div>
+  </section>
+
+  <section class="db-section db-section--about-us-resurrection">
+    <div class="db-container">
       <div class="db-row">
 
-        <div class="db-the-natives-title">
+        <div class="db-col">
+          <div class="title-wrap">
+            Your entry point to the Deadbeat World
+          </div>
+
+          <div class="db-cards-image-container">
+            <div class="db-cards-image">
+              <img src="{{ 'About_Us_asset-resurrection-v01.png' | asset_url }}" alt="">
+            </div>
+
+            <div class="db-cards-image">
+              <img src="{{ 'About_Us_asset-resurrection-v02.png' | asset_url }}" alt="">
+            </div>
+          </div>
+        </div>
+
+        <div class="db-col">
           <h3>
+            RESURRECTION ANTHEMS
+          </h3>
+
+          <div class="db-resurrection-description">
+            Each NFT consists of individual, layered music stems that combine into a single, cohesive beat
+          </div>
+
+          <div class="db-resurrection-content-block">
             <span>
-              THE STORY:
+              Resurrection Anthems are the initial Deadbeat collection drop. Each NFT consists of individual, layered music stems that combine into a single, cohesive beat.
             </span>
 
             <span>
-              THE NATIVES
+              Individual stems are swappable between owned NFTs, allowing the holder to mix their ideal Anthems. Once satisfied with the mix, the Anthem can be Soulbound to enter the mint experience for customizable Undead characters.
             </span>
-          </h3>
 
-          <h3>
-            Main Characters
-          </h3>
+            <span>
+              Anthems are sellable or tradable until Soulbound. Collection is deflationary.
+            </span>
+          </div>
+
+          <div class="db-resurrection-cta">
+            <button class="db-btn">
+              BUY NOW
+            </button>
+
+            <a href="">
+
+              <span>
+                VIEW COLLECTIONS
+              </span>
+
+              <svg xmlns="http://www.w3.org/2000/svg" width="160" height="2" viewBox="0 0 160 2" fill="none">
+                <path d="M1 1H159.5" stroke="white" stroke-linecap="round"/>
+              </svg>
+            </a>
+          </div>
         </div>
       </div>
     </div>
   </section>
+
+  <section class="db-section db-section--about-us-elevate">
+    <div class="db-container">
+      <div class="db-row">
+        <div class="db-col">
+
+          <h4>
+            The Company
+          </h4>
+          <h3>
+              ELEVATE PICTURES
+          </h3>
+        </div>
+
+        <div class="db-col"></div>
+      </div>
+    </div>
+  </section>
 </main>
+
+<script>
+  const DB_SF_Page_About_Us_Options = {
+    name: 'DB SF Page About Us Options',
+    data() {
+      return {
+        inActiveButton: 'right'
+      }
+    },
+    created() {},
+    mounted() {
+      console.log('HELLO WORLD MARCO YOU ARE IN VUE')
+      const wrapper = this.$refs.wrapper;
+      const carousel = this.$refs.carousel;
+      const firstCardWidth = carousel.querySelector(".native-card").offsetWidth + 40;
+      const arrowBtns = this.$refs.buttons.querySelectorAll("svg");
+      const carouselChildrens = [...carousel.children];
+
+      let isDragging = false, isAutoPlay = true, startX, startScrollLeft, timeoutId;
+
+      let cardPerView = Math.round(carousel.offsetWidth / firstCardWidth);
+
+      carouselChildrens.slice(-cardPerView).reverse().forEach(card => {
+          carousel.insertAdjacentHTML("afterbegin", card.outerHTML);
+      });
+
+      carouselChildrens.slice(0, cardPerView).forEach(card => {
+          carousel.insertAdjacentHTML("beforeend", card.outerHTML);
+      });
+
+      carousel.classList.add("no-transition");
+      carousel.scrollLeft = carousel.offsetWidth;
+      carousel.classList.remove("no-transition");
+
+      arrowBtns.forEach(btn => {
+        btn.addEventListener("click", () => {
+            carousel.scrollLeft += btn.id == "left" ? -firstCardWidth : firstCardWidth;
+        });
+      });
+
+      const dragStart = (e) => {
+        isDragging = true;
+        carousel.classList.add("dragging");
+          // Records the initial cursor and scroll position of the carousel
+        startX = e.pageX;
+        startScrollLeft = carousel.scrollLeft;
+      }
+
+      const dragging = (e) => {
+        if(!isDragging) return; // if isDragging is false return from here
+          // Updates the scroll position of the carousel based on the cursor movement
+        carousel.scrollLeft = startScrollLeft - (e.pageX - startX);
+      }
+
+      const dragStop = () => {
+        isDragging = false;
+        carousel.classList.remove("dragging");
+      }
+
+      const infiniteScroll = () => {
+        // If the carousel is at the beginning, scroll to the end
+        if(carousel.scrollLeft === 0) {
+          carousel.classList.add("no-transition");
+          carousel.scrollLeft = carousel.scrollWidth - (2 * carousel.offsetWidth);
+          carousel.classList.remove("no-transition");
+        }
+          // If the carousel is at the end, scroll to the beginning
+        else if(Math.ceil(carousel.scrollLeft) === carousel.scrollWidth - carousel.offsetWidth) {
+          carousel.classList.add("no-transition");
+          carousel.scrollLeft = carousel.offsetWidth;
+          carousel.classList.remove("no-transition");
+        }
+
+        // Clear existing timeout & start autoplay if mouse is not hovering over carousel
+      }
+
+      const autoPlay = () => {
+          if(window.innerWidth < 800 || !isAutoPlay) return; // Return if window is smaller than 800 or isAutoPlay is false
+          // Autoplay the carousel after every 2500 ms
+          timeoutId = setTimeout(() => carousel.scrollLeft += firstCardWidth, 2500);
+      }
+      autoPlay();
+      carousel.addEventListener("mousedown", dragStart);
+      carousel.addEventListener("mousemove", dragging);
+      document.addEventListener("mouseup", dragStop);
+      carousel.addEventListener("scroll", infiniteScroll);
+
+      wrapper.addEventListener("mouseenter", () => clearTimeout(timeoutId));
+      wrapper.addEventListener("mouseleave", autoPlay);
+    },
+    computed:{
+    },
+    methods:{
+      onChangeActiveButton(arrow) { 
+        if (arrow === 'right') {
+          this.inActiveButton = 'right';
+        } else if (arrow === 'left') {
+          this.inActiveButton = 'left';
+        }
+      }
+    }
+  }
+
+  Vue.createApp(DB_SF_Page_About_Us_Options).mount('.db-page--about-us')
+</script>
