--- a/styles/db-theme/_animation.scss
+++ b/styles/db-theme/_animation.scss
@@ -1,3 +1,20 @@
 /*===============*/
 /*   ANIMATION   */
 /*===============*/
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes running-text {
+  from {
+    translate: 100% 0%;
+  }
+  to {
+    translate: -100% 0%;
+  }
+}
