--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -1,9 +1,39 @@
 .db-page--home {
+
+  .db-site-loader {
+    position: fixed;
+    z-index: 999999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0E0914;
+    visibility: hidden;
+    opacity: 0;
+    width: 100%;
+    height: 100vh;
+
+    .svg-icon-loader {
+      display: block;
+      width: 100px;
+      height: 100px;
+    }
+
+    &.--show {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+
   .db-section--banner {
     position: relative;
     width: 100%;
     height: 100vh;
-    padding: 0 25px;
+    padding: 0 20px;
+
+    @media only screen and (max-width: 1080px) {
+      height: auto;
+      padding: 0 20px 100px;
+    }
 
     .db-bg-wrap {
       position: absolute;
@@ -13,6 +43,14 @@
       background-color: rgba(12, 7, 15, 0.40);
       width: 100%;
       height: 100%;
+
+      @media only screen and (max-width: 1080px) {
+        height: 745px;
+      }
+
+      @media only screen and (max-width: 768px) {
+        height: 555px;
+      }
 
       .db-bg-video {
         position: absolute;
@@ -31,21 +69,50 @@
       z-index: 2;
       display: block;
       height: 100%;
-      padding: 125px 0 25px;
+      padding: 125px 0 0;
 
       .db-row {
         justify-content: space-between;
         gap: 70px;
         height: 100%;
 
+        @media only screen and (max-width: 1440px) {
+          gap: 30px;
+        }
+
+        @media only screen and (max-width: 1080px) {
+          flex-direction: column;
+        }
+
         .db-col {
           &:nth-of-type(1) {
             max-width: 550px;
             min-width: 550px;
-            margin: 80px 0 0;
+            padding: 80px 0 0;
+
+            @media only screen and (max-width: 1440px) {
+              max-width: 520px;
+              min-width: 520px;
+            }
+
+            @media only screen and (max-width: 1080px) {
+              max-width: 100%;
+              min-width: unset;
+              height: 620px;
+            }
+
+            @media only screen and (max-width: 768px) {
+              height: 430px;
+              padding: 36px 0 0;
+            }
 
             h1 {
               margin: 0 0 50px;
+              pointer-events: none;
+
+              @media only screen and (max-width: 768px) {
+                margin: 0 0 40px;
+              }
 
               span {
                 font-family: $primaryFontFamily;
@@ -53,11 +120,43 @@
                 font-weight: 700;
                 line-height: 1.1em;
 
+                @keyframes glitchTop {
+                  2%, 64% {
+                    transform: translate(2px,-2px);
+                  }
+                  4%,60% {
+                    transform: translate(-2px,2px);
+                  }
+                  62% {
+                    transform: translate(13px,-1px) skew(-13deg);
+                  }
+                }
+
+                @keyframes glitchBotom {
+                  2%, 64% {
+                    transform: translate(-2px,0);
+                  }
+                  4%, 60% {
+                    transform: translate(-2px,0);
+                  }
+                  62% {
+                    transform: translate(-22px,5px) skew(21deg);
+                  }
+                }
+
                 &:nth-of-type(1) {
                   color: $whiteColor;
                   font-size: 56px;
                   text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
                   display: block;
+
+                  @media only screen and (max-width: 1440px) {
+                    font-size: 52px;
+                  }
+
+                  @media only screen and (max-width: 768px) {
+                    font-size: 50px;
+                  }
                 }
 
                 &:nth-of-type(2) {
@@ -65,14 +164,78 @@
                   font-size: 88px;
                   text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.40);
                   letter-spacing: -3.52px;
+                  position: relative;
                   display: inline-block;
+
+                  @media only screen and (max-width: 1440px) {
+                    font-size: 84px;
+                  }
+
+                  @media only screen and (max-width: 768px) {
+                    font-size: 60px;
+                  }
+
+                  &::before,
+                  &::after {
+                    content: attr(title);
+                    color: inherit;
+                    font-family: inherit;
+                    font-size: inherit;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                  }
+
+                  &::before {
+                    animation: glitchTop 1s linear infinite;
+                    -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+                    clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+                  }
+
+                  &::after {
+                    animation: glitchBotom 1.5s linear infinite;
+                    -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+                    clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+                  }
                 }
 
                 &:nth-of-type(3) {
                   color: #B522EB;
                   font-size: 88px;
                   letter-spacing: -3.52px;
+                  position: relative;
                   display: inline-block;
+
+                  @media only screen and (max-width: 1440px) {
+                    font-size: 84px;
+                  }
+                  
+                  @media only screen and (max-width: 768px) {
+                    font-size: 60px;
+                  }
+
+                  &::before,
+                  &::after {
+                    content: attr(title);
+                    color: inherit;
+                    font-family: inherit;
+                    font-size: inherit;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                  }
+
+                  &::before {
+                    animation: glitchTop 1s linear infinite;
+                    -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+                    clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+                  }
+
+                  &::after {
+                    animation: glitchBotom 1.5s linear infinite;
+                    -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+                    clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+                  }
                 }
               }
             }
@@ -87,6 +250,14 @@
               letter-spacing: -0.64px;
               max-width: 350px;
               margin: 0 0 266px;
+
+              @media only screen and (max-width: 1440px) {
+                margin: 0 0 100px;
+              }
+
+              @media only screen and (max-width: 768px) {
+                margin: 0 0 58px;
+              }
             }
 
             .db-qr-wrap {
@@ -97,12 +268,22 @@
               max-width: 265px;
               width: 100%;
 
+              @media only screen and (max-width: 768px) {
+                gap: 21px;
+              }
+
               .db-qr-code {
                 display: block;
                 max-width: 120px;
                 min-width: 120px;
                 width: 100%;
                 height: 120px;
+
+                @media only screen and (max-width: 768px) {
+                  max-width: 100px;
+                  min-width: 100px;
+                  height: 100px;
+                }
               }
 
               .db-qr-label {
@@ -118,83 +299,202 @@
           }
 
           &:nth-of-type(2) {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            gap: 47px;
-            width: 100%;
+            @media only screen and (max-width: 1080px) {
+              max-width: 100%;
+              min-width: unset;
+            }
 
-            .db-widget-container {
-              scroll-behavior: smooth;
+            > .db-inner-row {
+              display: flex;
+              justify-content: space-between;
+              align-items: flex-start;
+              gap: 47px;
               width: 100%;
               height: 100%;
-              overflow: hidden;
-              cursor: grab;
 
-              .db-widget-row {
-                display: flex;
-                justify-content: space-between;
-                align-items: flex-start;
-                gap: 0 40px;
+              @media only screen and (max-width: 1440px) {
+                gap: 35px;
+              }
 
-                .db-widget-col {
-                  .db-widget-list {
-                    display: flex;
-                    flex-direction: column;
-                    align-content: flex-start;
-                    gap: 30px 0;
+              > .db-inner-col {
+                height: 100%;
+
+                &:nth-of-type(1) {
+                  width: 100%;
+
+                  .db-widget-container {
+                    scroll-behavior: smooth;
                     width: 100%;
                     height: 100%;
-                    padding: 20px 0;
+                    overflow: hidden;
+                    cursor: grab;
 
-                    .db-widget-item {
-                      background-color: #866881;
-                      width: 100%;
-                      min-height: 50px; 
+                    @media only screen and (max-width: 768px) {
+                      pointer-events: none;
+                    }
+
+                    .db-widget-row {
+                      display: flex;
+                      justify-content: space-between;
+                      align-items: flex-start;
+                      gap: 0 5px;
+
+                      @media only screen and (max-width: 1440px) {
+                        justify-content: flex-end;
+                      }
+
+                      @media only screen and (max-width: 1366px) {
+                        flex-direction: column;
+                        align-items: flex-end;
+                      }
+
+                      @media only screen and (max-width: 1080px) {
+                        flex-direction: row;
+                        justify-content: center;
+                        align-items: flex-start;
+                      }
+
+                      @media only screen and (max-width: 768px) {
+                        flex-direction: column;
+                        justify-content: flex-start;
+                        align-items: center;
+                      }
+
+                      .db-widget-col {
+                        .db-widget-list {
+                          display: flex;
+                          flex-direction: column;
+                          align-content: flex-start;
+                          gap: 30px 0;
+                          width: 100%;
+                          height: 100%;
+                          padding: 20px 10px;
+
+                          .db-widget-item {
+                            width: 100%;
+                            min-height: 50px;
+
+                            // opacity: 0;
+                            // scale: 0.5;
+                            // translate: 0 1000px;
+                          }
+                        }
+
+                        &:nth-of-type(1) {
+                          max-width: 425px;
+                          min-width: 425px;
+                        }
+
+                        &:nth-of-type(2) {
+                          max-width: 280px;
+                          min-width: 280px;
+
+                          @media only screen and (max-width: 1366px) {
+                            max-width: 425px;
+                          }
+                        }
+                      }
+                    }
+
+                    &.--dragging {
+                      cursor: grabbing;
+                    }
+                  }
+                }
+
+                &:nth-of-type(2) {
+                  max-width: 60px;
+                  min-width: 60px;
+
+                  @media only screen and (max-width: 1440px) {
+                    display: none;
+                    max-width: unset;
+                    min-width: unset;
+                  }
+
+                  .db-socials-list {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    align-items: center;
+                    gap: 24px;
+                    width: 100%;
+                    margin: 80px 0 180px;
+
+                    .db-socials-item {
+                      .db-socials-link {
+                        display: block;
+                        translate: 0 0;
+                        transition:
+                          translate 200ms ease-in-out 0ms;
+
+                        .db-svg {}
+
+                        &:hover {
+                          translate: 0 -5px;
+                        }
+                      }
                     }
                   }
 
-                  &:nth-of-type(1) {
-                    max-width: 405px;
-                    min-width: 405px;
-                  }
+                  .db-btn--scroll-up,
+                  .db-btn--scroll-down {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 100%;
+                    height: 50px;
+                    margin: 20px auto;
 
-                  &:nth-of-type(2) {
-                    max-width: 260px;
-                    min-width: 260px;
+                    .svg-icon-arrow-up,
+                    .svg-icon-arrow-down {
+                      #path_01 {
+                        fill: #CAC7D0;
+                        transition:
+                          all 200ms ease-in-out 0ms;
+                      }
+                    }
+
+                    &:hover {
+                      .svg-icon-arrow-up,
+                      .svg-icon-arrow-down {
+                        #path_01 {
+                          fill: $secondaryColor;
+                          fill-opacity: 1;
+                        }
+                      }
+                    }
                   }
                 }
-              }
-
-              &.--dragging {
-                cursor: grabbing;
               }
             }
+          }
+        }
+      }
+    }
 
-            .db-socials-list {
-              display: flex;
-              flex-direction: column;
-              justify-content: flex-start;
-              align-items: center;
-              gap: 24px;
-              max-width: 60px;
-              min-width: 60px;
-              width: 100%;
-              margin: 80px 0 0;
+    &::after {
+      content: '';
+      position: absolute;
+      z-index: 3;
+      top: unset;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      display: block;
+      background: linear-gradient(0deg, #0E0914 0%, rgba(14, 9, 20, 0.00) 100%);
+      width: 100%;
+      height: 160px;
+    }
 
-              .db-socials-item {
-                .db-socials-link {
-                  display: block;
-                  translate: 0 0;
-                  transition:
-                    translate 200ms ease-in-out 0ms;
-
-                  .db-svg {}
-
-                  &:hover {
-                    translate: 0 -5px;
-                  }
-                }
+    &.--animate-now {
+      .db-container {
+        .db-row {
+          .db-col {
+            &:nth-of-type(1) {
+              h1 {
+                animation:
+                  fade-in 200ms ease-in-out 0ms;
               }
             }
           }
