--- a/templates/page.about-us.liquid
+++ b/templates/page.about-us.liquid
@@ -97,9 +97,7 @@
 
   <section class="db-section db-section--about-us-after-life">
     <div class="db-background-overlay"></div>
-    <div class="db-container">
-
-      
+    <div class="db-container">  
       <div class="title-wrap">
         <h2>
           THE AFTER, AFTER LIFE
@@ -142,14 +140,14 @@
             
           </div>
 
-          <div class="wrapper" ref="wrapper">
-            <ul class="carousel" ref="carousel">
+          <div class="wrapper" ref="wrapper" @mouseenter="clearCurTimeout" @mouseleave="autoPlay">
+            <ul class="carousel" ref="carousel" @scroll="onInfiniteScroll" @mousedown="onDragStart($event)" @mousemove="onDragging($event)">
 
               <li class="native-card">
                 <div class="card-wrapper">
                   <div class="db-natives-image-container">
                    <div class="db-natives-image">
-                    <img src="{{ 'About-Us__asset-natives-v01.png' | asset_url }}" alt="">
+                    <img src="{{ 'About-Us__asset-natives-v01.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
                   </div>
                   </div>
 
@@ -169,7 +167,7 @@
                 <div class="card-wrapper">
                   <div class="db-natives-image-container">
                   <div class="db-natives-image">
-                    <img src="{{ 'About-Us__asset-natives-v02.png' | asset_url }}" alt="">
+                    <img src="{{ 'About-Us__asset-natives-v02.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
                   </div>
                   </div>
 
@@ -190,7 +188,7 @@
                 <div class="card-wrapper">
                   <div class="db-natives-image-container">
                     <div class="db-natives-image">
-                      <img src="{{ 'About-Us__asset-natives-v03.png' | asset_url }}" alt="">
+                      <img src="{{ 'About-Us__asset-natives-v03.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
                     </div>
                   </div>
 
@@ -211,11 +209,11 @@
           <div class="db-buttons-slider">
             <div class="buttons" ref="buttons">
 
-              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="21" viewBox="0 0 12 21" fill="none" class="svg-icon-prev db-svg" id="left" @click="onChangeActiveButton('left')" >
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="21" viewBox="0 0 12 21" fill="none" class="svg-icon-prev db-svg" id="left" @click="onChangeSlider('left')" >
                 <path d="M0 10.9646C0 11.4615 0.248704 11.9584 0.497409 12.2068L8.70466 20.4056C9.45078 21.1509 10.6943 21.1509 11.4404 20.4056C12.1865 19.6603 12.1865 18.418 11.4404 17.6727L4.72539 10.9646L11.4404 4.25653C12.1865 3.51118 12.1865 2.26895 11.4404 1.52361C10.6943 0.778263 9.45078 0.778263 8.70466 1.52361L0.746114 9.47392C0.248705 9.97081 0 10.4677 0 10.9646Z" fill="#CAC7D0" :style="{fillOpacity: inActiveButton !== 'left' ? 0.4 : ''}"/>
               </svg>
 
-              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="21" viewBox="0 0 12 21" fill="none" class="svg-icon-next db-svg" id="right" @click="onChangeActiveButton('right')">
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="21" viewBox="0 0 12 21" fill="none" class="svg-icon-next db-svg" id="right" @click="onChangeSlider('right')">
                 <path d="M12 10.9646C12 11.4615 11.7513 11.9584 11.5026 12.2068L3.29534 20.4056C2.54922 21.1509 1.3057 21.1509 0.559586 20.4056C-0.186529 19.6603 -0.186529 18.418 0.559586 17.6727L7.27461 10.9646L0.559586 4.25653C-0.186529 3.51118 -0.186529 2.26895 0.559586 1.52361C1.3057 0.778263 2.54922 0.778263 3.29534 1.52361L11.2539 9.47392C11.7513 9.97081 12 10.4677 12 10.9646Z" fill="#CAC7D0" :style="{fillOpacity: inActiveButton !== 'right' ? 0.4 : ''}"/>
               </svg>
             </div>
@@ -242,7 +240,7 @@
             </div>
 
             <div class="db-cards-image">
-              <img src="{{ 'About_Us_asset-resurrection-v02.png' | asset_url }}" alt="">
+                <img src="{{ 'About_Us_asset-resurrection-v02.png' | asset_url }}" alt="">
             </div>
           </div>
         </div>
@@ -257,17 +255,17 @@
           </div>
 
           <div class="db-resurrection-content-block">
-            <span>
+            <p>
               Resurrection Anthems are the initial Deadbeat collection drop. Each NFT consists of individual, layered music stems that combine into a single, cohesive beat.
-            </span>
+            </p>
 
-            <span>
+            <p>
               Individual stems are swappable between owned NFTs, allowing the holder to mix their ideal Anthems. Once satisfied with the mix, the Anthem can be Soulbound to enter the mint experience for customizable Undead characters.
-            </span>
+            </p>
 
-            <span>
+            <p>
               Anthems are sellable or tradable until Soulbound. Collection is deflationary.
-            </span>
+            </p>
           </div>
 
           <div class="db-resurrection-cta">
@@ -304,7 +302,36 @@
           </h3>
         </div>
 
-        <div class="db-col"></div>
+        <div class="db-col">
+          <div class="db-image-container">
+            <img src="{{ 'About-Us__asset-elevate-v01.png' | asset_url }}" alt="">
+          </div>
+
+          <div class="db-elevate-description">
+            <p>
+              Elevate is a transmedia entertainment company chasing simple ideas that can change the world.
+              <br />
+              <br />
+              It means we understand and build ideas that scale across platforms and over time. It means we’re experts in business judo, flipping problems into promise.
+            </p>
+          </div>
+
+          <div class="db-elevate-connect-with-us">
+            <div class="connect-with-us">
+              Explore the world of Deadbeat! Connect with us.
+            </div>
+
+            <div class="db-elevate-website">
+              <span>
+                WEBSITE
+              </span>
+
+              <a href="https://www.elevatepictures.com/">
+                https://www.elevatepictures.com/
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -315,21 +342,28 @@
     name: 'DB SF Page About Us Options',
     data() {
       return {
-        inActiveButton: 'right'
+        inActiveButton: 'right',
+        settingSlider: {
+          firstCardWidth:null,
+          isDragging: false,
+          isAutoPlay: true,
+          startX:null,
+          startScrollLeft:null,
+        },
+        timeoutId:null
       }
     },
     created() {},
     mounted() {
-      console.log('HELLO WORLD MARCO YOU ARE IN VUE')
+      console.log('HELLO WORLD MARCO YOU ARE IN VUE');
       const wrapper = this.$refs.wrapper;
       const carousel = this.$refs.carousel;
-      const firstCardWidth = carousel.querySelector(".native-card").offsetWidth + 40;
       const arrowBtns = this.$refs.buttons.querySelectorAll("svg");
       const carouselChildrens = [...carousel.children];
 
-      let isDragging = false, isAutoPlay = true, startX, startScrollLeft, timeoutId;
+      this.settingSlider.firstCardWidth = carousel.querySelector(".native-card").offsetWidth + 44;
 
-      let cardPerView = Math.round(carousel.offsetWidth / firstCardWidth);
+      let cardPerView = Math.round(carousel.offsetWidth / this.settingSlider.firstCardWidth);
 
       carouselChildrens.slice(-cardPerView).reverse().forEach(card => {
           carousel.insertAdjacentHTML("afterbegin", card.outerHTML);
@@ -340,74 +374,83 @@
       });
 
       carousel.classList.add("no-transition");
-      carousel.scrollLeft = carousel.offsetWidth;
+      carousel.scrollLeft = carousel.offsetWidth + 44;
       carousel.classList.remove("no-transition");
 
-      arrowBtns.forEach(btn => {
-        btn.addEventListener("click", () => {
-            carousel.scrollLeft += btn.id == "left" ? -firstCardWidth : firstCardWidth;
-        });
-      });
-
-      const dragStart = (e) => {
-        isDragging = true;
-        carousel.classList.add("dragging");
-          // Records the initial cursor and scroll position of the carousel
-        startX = e.pageX;
-        startScrollLeft = carousel.scrollLeft;
-      }
-
-      const dragging = (e) => {
-        if(!isDragging) return; // if isDragging is false return from here
-          // Updates the scroll position of the carousel based on the cursor movement
-        carousel.scrollLeft = startScrollLeft - (e.pageX - startX);
-      }
-
       const dragStop = () => {
-        isDragging = false;
+        this.settingSlider.isDragging = false;
         carousel.classList.remove("dragging");
       }
+     
+      document.addEventListener("mouseup", dragStop);
+      this.autoPlay();
+    },
+    computed:{
+    },
+    methods:{
+      onChangeSlider(arrow) {
+        const carousel = this.$refs.carousel;
 
-      const infiniteScroll = () => {
+        if (arrow === 'right') {
+          this.inActiveButton = 'right';
+          carousel.scrollLeft = carousel.scrollLeft + this.settingSlider.firstCardWidth;
+
+        } else if (arrow === 'left') {
+          this.inActiveButton = 'left';
+          carousel.scrollLeft = carousel.scrollLeft - this.settingSlider.firstCardWidth;
+        }
+      },
+      onInfiniteScroll() {
+        const carousel = this.$refs.carousel;
+
         // If the carousel is at the beginning, scroll to the end
         if(carousel.scrollLeft === 0) {
           carousel.classList.add("no-transition");
-          carousel.scrollLeft = carousel.scrollWidth - (2 * carousel.offsetWidth);
+          carousel.scrollLeft = carousel.scrollWidth - (2 * carousel.offsetWidth + 40);
           carousel.classList.remove("no-transition");
         }
           // If the carousel is at the end, scroll to the beginning
         else if(Math.ceil(carousel.scrollLeft) === carousel.scrollWidth - carousel.offsetWidth) {
           carousel.classList.add("no-transition");
-          carousel.scrollLeft = carousel.offsetWidth;
+          carousel.scrollLeft = carousel.offsetWidth + 40;
           carousel.classList.remove("no-transition");
         }
 
         // Clear existing timeout & start autoplay if mouse is not hovering over carousel
-      }
+      },
+      onDragStart(event) {
+        const carousel = this.$refs.carousel;
 
-      const autoPlay = () => {
-          if(window.innerWidth < 800 || !isAutoPlay) return; // Return if window is smaller than 800 or isAutoPlay is false
-          // Autoplay the carousel after every 2500 ms
-          timeoutId = setTimeout(() => carousel.scrollLeft += firstCardWidth, 2500);
-      }
-      autoPlay();
-      carousel.addEventListener("mousedown", dragStart);
-      carousel.addEventListener("mousemove", dragging);
-      document.addEventListener("mouseup", dragStop);
-      carousel.addEventListener("scroll", infiniteScroll);
-
-      wrapper.addEventListener("mouseenter", () => clearTimeout(timeoutId));
-      wrapper.addEventListener("mouseleave", autoPlay);
-    },
-    computed:{
-    },
-    methods:{
-      onChangeActiveButton(arrow) { 
-        if (arrow === 'right') {
-          this.inActiveButton = 'right';
-        } else if (arrow === 'left') {
-          this.inActiveButton = 'left';
+        this.settingSlider.isDragging = true;
+        carousel.classList.add("dragging");
+          // Records the initial cursor and scroll position of the carousel
+        console.log(event.pageX)
+        this.settingSlider.startX = event.pageX;
+        this.settingSlider.startScrollLeft = carousel.scrollLeft;
+      },
+      onDragging(event) {
+        const carousel = this.$refs.carousel;
+        // if isDragging is false return from here
+        if (!this.settingSlider.isDragging) {
+          return;
         }
+        // Updates the scroll position of the carousel based on the cursor movement
+        carousel.scrollLeft = this.settingSlider.startScrollLeft - (event.pageX - this.settingSlider.startX);
+      },
+      clearCurTimeout() {
+        clearTimeout(this.timeoutId);
+      },
+      autoPlay() {
+        const carousel = this.$refs.carousel;
+        if(window.innerWidth < 800 || !this.settingSlider.isAutoPlay) return;
+
+        // if window is smaller than 800 or isAutoPlay is false
+        // Autoplay the carousel after every 2500 ms
+
+        this.timeoutId = setTimeout(() => carousel.scrollLeft += this.settingSlider.firstCardWidth, 2500);
+      },
+      onPreventDrag(event) {
+        event.preventDefault();
       }
     }
   }
